--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         width: 100px;
       }
     </style>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <p>Enter a date in the format <strong>yyyy/mm/dd</strong>:</p>
@@ -126,7 +127,13 @@
     <div
       style="display: flex; gap: 20px; margin-top: 20px; align-items: center"
     >
-      <input type="text" id="dateInput1" maxlength="4" style="width: 80px" placeholder="1990" />年
+      <input
+        type="text"
+        id="dateInput1"
+        maxlength="4"
+        style="width: 80px"
+        placeholder="1990"
+      />年
       <select name="" id="">
         <option value="">01</option>
         <option value="">02</option>
@@ -179,12 +186,300 @@
     <div
       style="display: flex; gap: 20px; margin-top: 20px; align-items: center"
     >
-      <input type="text" id="dateInput1" maxlength="4" style="width: 80px" placeholder="1990" />年
-      <input type="text" id="dateInput1" maxlength="2" style="width: 75px" placeholder="01" />月
-      <input type="text" id="dateInput1" maxlength="2" style="width: 75px" placeholder="01" />日
+      <input
+        type="text"
+        id="dateInput1"
+        maxlength="4"
+        style="width: 80px"
+        placeholder="1990"
+      />年
+      <input
+        type="text"
+        id="dateInput1"
+        maxlength="2"
+        style="width: 75px"
+        placeholder="01"
+      />月
+      <input
+        type="text"
+        id="dateInput1"
+        maxlength="2"
+        style="width: 75px"
+        placeholder="01"
+      />日
     </div>
 
-    <input type="text" id="dateInput3" placeholder="19900101" maxlength="8" style="margin-top: 20px;" />
+    <input
+      type="text"
+      id="dateInput3"
+      placeholder="19900101"
+      maxlength="8"
+      style="margin-top: 20px"
+    />
+
+    <div style="margin-top: 20px">Demo JP</div>
+    <div
+      style="display: flex; gap: 20px; margin-top: 20px; align-items: center"
+    >
+      <div class="custom-select">
+        <div class="selected-option" id="selected-option-1">
+          <span id="selected-option-span-1">1990</span
+          ><img
+            src="./assets/img/down-arrow.svg"
+            alt=""
+            class="dropdown__menu-button-icon"
+            width="18"
+            height="9"
+          />
+        </div>
+        <ul class="options-list" id="options-list-1">
+          <li value="" class="option option-1">1990</li>
+          <li value="" class="option option-1">1991</li>
+          <li value="" class="option option-1">1992</li>
+          <li value="" class="option option-1">1993</li>
+          <li value="" class="option option-1">1994</li>
+          <li value="" class="option option-1">1995</li>
+          <li value="" class="option option-1">1996</li>
+          <li value="" class="option option-1">1997</li>
+          <li value="" class="option option-1">1998</li>
+          <li value="" class="option option-1">1999</li>
+          <li value="" class="option option-1">2000</li>
+          <li value="" class="option option-1">2001</li>
+          <li value="" class="option option-1">2002</li>
+          <li value="" class="option option-1">2003</li>
+          <li value="" class="option option-1">2004</li>
+          <li value="" class="option option-1">2005</li>
+          <li value="" class="option option-1">2006</li>
+          <li value="" class="option option-1">2007</li>
+          <li value="" class="option option-1">2008</li>
+          <li value="" class="option option-1">2009</li>
+          <li value="" class="option option-1">2010</li>
+          <li value="" class="option option-1">2011</li>
+          <li value="" class="option option-1">2012</li>
+          <li value="" class="option option-1">2013</li>
+          <li value="" class="option option-1">2014</li>
+          <li value="" class="option option-1">2015</li>
+          <li value="" class="option option-1">2016</li>
+          <li value="" class="option option-1">2017</li>
+          <li value="" class="option option-1">2018</li>
+          <li value="" class="option option-1">2019</li>
+          <li value="" class="option option-1">2020</li>
+          <li value="" class="option option-1">2021</li>
+          <li value="" class="option option-1">2022</li>
+          <li value="" class="option option-1">2023</li>
+          <li value="" class="option option-1">2024</li>
+          <li value="" class="option option-1">2025</li>
+        </ul>
+      </div>
+      年
+
+      <div class="custom-select">
+        <div class="selected-option" id="selected-option-2">
+          <span id="selected-option-span-2">01</span
+          ><img
+            src="./assets/img/down-arrow.svg"
+            alt=""
+            class="dropdown__menu-button-icon"
+            width="18"
+            height="9"
+          />
+        </div>
+        <ul class="options-list" id="options-list-2">
+          <li value="" class="option option-2">01</li>
+          <li value="" class="option option-2">02</li>
+          <li value="" class="option option-2">03</li>
+          <li value="" class="option option-2">04</li>
+          <li value="" class="option option-2">05</li>
+          <li value="" class="option option-2">06</li>
+          <li value="" class="option option-2">07</li>
+          <li value="" class="option option-2">08</li>
+          <li value="" class="option option-2">09</li>
+          <li value="" class="option option-2">10</li>
+          <li value="" class="option option-2">11</li>
+          <li value="" class="option option-2">12</li>
+        </ul>
+      </div>
+      月
+
+      <div class="custom-select">
+        <div class="selected-option" id="selected-option-3">
+          <span id="selected-option-span-3">01</span
+          ><img
+            src="./assets/img/down-arrow.svg"
+            alt=""
+            class="dropdown__menu-button-icon"
+            width="18"
+            height="9"
+          />
+        </div>
+        <ul class="options-list" id="options-list-3">
+          <li value="" class="option option-3">01</li>
+          <li value="" class="option option-3">02</li>
+          <li value="" class="option option-3">03</li>
+          <li value="" class="option option-3">04</li>
+          <li value="" class="option option-3">05</li>
+          <li value="" class="option option-3">06</li>
+          <li value="" class="option option-3">07</li>
+          <li value="" class="option option-3">08</li>
+          <li value="" class="option option-3">09</li>
+          <li value="" class="option option-3">10</li>
+          <li value="" class="option option-3">11</li>
+          <li value="" class="option option-3">12</li>
+          <li value="" class="option option-3">13</li>
+          <li value="" class="option option-3">14</li>
+          <li value="" class="option option-3">15</li>
+          <li value="" class="option option-3">16</li>
+          <li value="" class="option option-3">17</li>
+          <li value="" class="option option-3">18</li>
+          <li value="" class="option option-3">19</li>
+          <li value="" class="option option-3">20</li>
+          <li value="" class="option option-3">21</li>
+          <li value="" class="option option-3">22</li>
+          <li value="" class="option option-3">23</li>
+          <li value="" class="option option-3">24</li>
+          <li value="" class="option option-3">25</li>
+          <li value="" class="option option-3">26</li>
+          <li value="" class="option option-3">27</li>
+          <li value="" class="option option-3">28</li>
+          <li value="" class="option option-3">29</li>
+          <li value="" class="option option-3">30</li>
+          <li value="" class="option option-3">31</li>
+        </ul>
+      </div>
+      日
+    </div>
+
+    <div style="margin-top: 20px">Demo EN</div>
+    <div
+      style="display: flex; gap: 20px; margin-top: 20px; align-items: center"
+    >
+      <div class="custom-select">
+        <div class="selected-option" id="selected-option-5">
+          <span id="selected-option-span-5">01</span
+          ><img
+            src="./assets/img/down-arrow.svg"
+            alt=""
+            class="dropdown__menu-button-icon"
+            width="18"
+            height="9"
+          />
+        </div>
+        <ul class="options-list" id="options-list-5">
+          <li value="" class="option option-5">01</li>
+          <li value="" class="option option-5">02</li>
+          <li value="" class="option option-5">03</li>
+          <li value="" class="option option-5">04</li>
+          <li value="" class="option option-5">05</li>
+          <li value="" class="option option-5">06</li>
+          <li value="" class="option option-5">07</li>
+          <li value="" class="option option-5">08</li>
+          <li value="" class="option option-5">09</li>
+          <li value="" class="option option-5">10</li>
+          <li value="" class="option option-5">11</li>
+          <li value="" class="option option-5">12</li>
+        </ul>
+      </div>
+      月
+
+      <div class="custom-select">
+        <div class="selected-option" id="selected-option-6">
+          <span id="selected-option-span-6">01</span
+          ><img
+            src="./assets/img/down-arrow.svg"
+            alt=""
+            class="dropdown__menu-button-icon"
+            width="18"
+            height="9"
+          />
+        </div>
+        <ul class="options-list" id="options-list-6">
+          <li value="" class="option option-6">01</li>
+          <li value="" class="option option-6">02</li>
+          <li value="" class="option option-6">03</li>
+          <li value="" class="option option-6">04</li>
+          <li value="" class="option option-6">05</li>
+          <li value="" class="option option-6">06</li>
+          <li value="" class="option option-6">07</li>
+          <li value="" class="option option-6">08</li>
+          <li value="" class="option option-6">09</li>
+          <li value="" class="option option-6">10</li>
+          <li value="" class="option option-6">11</li>
+          <li value="" class="option option-6">12</li>
+          <li value="" class="option option-6">13</li>
+          <li value="" class="option option-6">14</li>
+          <li value="" class="option option-6">15</li>
+          <li value="" class="option option-6">16</li>
+          <li value="" class="option option-6">17</li>
+          <li value="" class="option option-6">18</li>
+          <li value="" class="option option-6">19</li>
+          <li value="" class="option option-6">20</li>
+          <li value="" class="option option-6">21</li>
+          <li value="" class="option option-6">22</li>
+          <li value="" class="option option-6">23</li>
+          <li value="" class="option option-6">24</li>
+          <li value="" class="option option-6">25</li>
+          <li value="" class="option option-6">26</li>
+          <li value="" class="option option-6">27</li>
+          <li value="" class="option option-6">28</li>
+          <li value="" class="option option-6">29</li>
+          <li value="" class="option option-6">30</li>
+          <li value="" class="option option-6">31</li>
+        </ul>
+      </div>
+      日
+
+      <div class="custom-select">
+        <div class="selected-option" id="selected-option-4">
+          <span id="selected-option-span-4">1990</span
+          ><img
+            src="./assets/img/down-arrow.svg"
+            alt=""
+            class="dropdown__menu-button-icon"
+            width="18"
+            height="9"
+          />
+        </div>
+        <ul class="options-list" id="options-list-4">
+          <li value="" class="option option-4">1990</li>
+          <li value="" class="option option-4">1991</li>
+          <li value="" class="option option-4">1992</li>
+          <li value="" class="option option-4">1993</li>
+          <li value="" class="option option-4">1994</li>
+          <li value="" class="option option-4">1995</li>
+          <li value="" class="option option-4">1996</li>
+          <li value="" class="option option-4">1997</li>
+          <li value="" class="option option-4">1998</li>
+          <li value="" class="option option-4">1999</li>
+          <li value="" class="option option-4">2000</li>
+          <li value="" class="option option-4">2001</li>
+          <li value="" class="option option-4">2002</li>
+          <li value="" class="option option-4">2003</li>
+          <li value="" class="option option-4">2004</li>
+          <li value="" class="option option-4">2005</li>
+          <li value="" class="option option-4">2006</li>
+          <li value="" class="option option-4">2007</li>
+          <li value="" class="option option-4">2008</li>
+          <li value="" class="option option-4">2009</li>
+          <li value="" class="option option-4">2010</li>
+          <li value="" class="option option-4">2011</li>
+          <li value="" class="option option-4">2012</li>
+          <li value="" class="option option-4">2013</li>
+          <li value="" class="option option-4">2014</li>
+          <li value="" class="option option-4">2015</li>
+          <li value="" class="option option-4">2016</li>
+          <li value="" class="option option-4">2017</li>
+          <li value="" class="option option-4">2018</li>
+          <li value="" class="option option-4">2019</li>
+          <li value="" class="option option-4">2020</li>
+          <li value="" class="option option-4">2021</li>
+          <li value="" class="option option-4">2022</li>
+          <li value="" class="option option-4">2023</li>
+          <li value="" class="option option-4">2024</li>
+          <li value="" class="option option-4">2025</li>
+        </ul>
+      </div>
+      年
+    </div>
 
     <script>
       document
@@ -224,6 +519,154 @@
 
           e.target.value = value;
         });
+
+      const selectedOption1 = document.getElementById("selected-option-1");
+      const optionsList1 = document.getElementById("options-list-1");
+      const selectedOption2 = document.getElementById("selected-option-2");
+      const optionsList2 = document.getElementById("options-list-2");
+      const selectedOption3 = document.getElementById("selected-option-3");
+      const optionsList3 = document.getElementById("options-list-3");
+      const options1 = document.querySelectorAll(".option-1");
+      const options2 = document.querySelectorAll(".option-2");
+      const options3 = document.querySelectorAll(".option-3");
+
+      const selectOptionSpan1 = document.getElementById(
+        "selected-option-span-1"
+      );
+      const selectOptionSpan2 = document.getElementById(
+        "selected-option-span-2"
+      );
+      const selectOptionSpan3 = document.getElementById(
+        "selected-option-span-3"
+      );
+
+      selectedOption1.addEventListener("click", () => {
+        optionsList1.classList.toggle("active");
+      });
+
+      options1.forEach((option) => {
+        option.addEventListener("click", (e) => {
+          selectOptionSpan1.textContent = e.target.textContent;
+          selectOptionSpan1.style.color = "#000000";
+          optionsList1.classList.remove("active");
+        });
+      });
+
+      document.addEventListener("click", (e) => {
+        if (!e.target.closest(".custom-select")) {
+          optionsList1.classList.remove("active");
+        }
+      });
+
+      selectedOption2.addEventListener("click", () => {
+        optionsList2.classList.toggle("active");
+      });
+
+      options2.forEach((option) => {
+        option.addEventListener("click", (e) => {
+          selectOptionSpan2.textContent = e.target.textContent;
+          selectOptionSpan2.style.color = "#000000";
+          optionsList2.classList.remove("active");
+        });
+      });
+
+      document.addEventListener("click", (e) => {
+        if (!e.target.closest(".custom-select")) {
+          optionsList2.classList.remove("active");
+        }
+      });
+
+      selectedOption3.addEventListener("click", () => {
+        optionsList3.classList.toggle("active");
+      });
+
+      options3.forEach((option) => {
+        option.addEventListener("click", (e) => {
+          selectOptionSpan3.textContent = e.target.textContent;
+          selectOptionSpan3.style.color = "#000000";
+          optionsList3.classList.remove("active");
+        });
+      });
+
+      document.addEventListener("click", (e) => {
+        if (!e.target.closest(".custom-select")) {
+          optionsList3.classList.remove("active");
+        }
+      });
+
+      const selectedOption4 = document.getElementById("selected-option-4");
+      const optionsList4 = document.getElementById("options-list-4");
+      const selectedOption5 = document.getElementById("selected-option-5");
+      const optionsList5 = document.getElementById("options-list-5");
+      const selectedOption6 = document.getElementById("selected-option-6");
+      const optionsList6 = document.getElementById("options-list-6");
+      const options4 = document.querySelectorAll(".option-4");
+      const options5 = document.querySelectorAll(".option-5");
+      const options6 = document.querySelectorAll(".option-6");
+
+      const selectOptionSpan4 = document.getElementById(
+        "selected-option-span-4"
+      );
+      const selectOptionSpan5 = document.getElementById(
+        "selected-option-span-5"
+      );
+      const selectOptionSpan6 = document.getElementById(
+        "selected-option-span-6"
+      );
+
+      selectedOption4.addEventListener("click", () => {
+        optionsList4.classList.toggle("active");
+      });
+
+      options4.forEach((option) => {
+        option.addEventListener("click", (e) => {
+          selectOptionSpan4.textContent = e.target.textContent;
+          selectOptionSpan4.style.color = "#000000";
+          optionsList4.classList.remove("active");
+        });
+      });
+
+      document.addEventListener("click", (e) => {
+        if (!e.target.closest(".custom-select")) {
+          optionsList4.classList.remove("active");
+        }
+      });
+
+      selectedOption5.addEventListener("click", () => {
+        optionsList5.classList.toggle("active");
+      });
+
+      options5.forEach((option) => {
+        option.addEventListener("click", (e) => {
+          selectOptionSpan5.textContent = e.target.textContent;
+          selectOptionSpan5.style.color = "#000000";
+          optionsList5.classList.remove("active");
+        });
+      });
+
+      document.addEventListener("click", (e) => {
+        if (!e.target.closest(".custom-select")) {
+          optionsList5.classList.remove("active");
+        }
+      });
+
+      selectedOption6.addEventListener("click", () => {
+        optionsList6.classList.toggle("active");
+      });
+
+      options6.forEach((option) => {
+        option.addEventListener("click", (e) => {
+          selectOptionSpan6.textContent = e.target.textContent;
+          selectOptionSpan6.style.color = "#000000";
+          optionsList6.classList.remove("active");
+        });
+      });
+
+      document.addEventListener("click", (e) => {
+        if (!e.target.closest(".custom-select")) {
+          optionsList6.classList.remove("active");
+        }
+      });
     </script>
   </body>
 </html>
