--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
   </head>
   <body>
     <p>Enter a date in the format <strong>yyyy/mm/dd</strong>:</p>
-    <input type="text" id="dateInput" placeholder="1990/01/01" maxlength="10" />
+    <!-- <input type="text" id="dateInput" placeholder="1990/01/01" maxlength="10" /> -->
 
-    <div style="display: flex; gap: 20px; margin-top: 20px">
+    <!-- <div style="display: flex; gap: 20px; margin-top: 20px">
       <select name="" id="">
         <option value="">1990</option>
         <option value="">1991</option>
@@ -215,7 +215,7 @@
       placeholder="19900101"
       maxlength="8"
       style="margin-top: 20px"
-    />
+    /> -->
 
     <div style="margin-top: 20px">Demo JP</div>
     <div
@@ -223,14 +223,17 @@
     >
       <div class="custom-select">
         <div class="selected-option" id="selected-option-1">
-          <span id="selected-option-span-1">1990</span
-          ><img
-            src="./assets/img/down-arrow.svg"
-            alt=""
-            class="dropdown__menu-button-icon"
-            width="18"
-            height="9"
-          />
+          <span id="selected-option-span-1">1990</span>
+          <div>
+            <span id="selected-option-span-1-1">年</span>
+            <img
+              src="./assets/img/down-arrow.png"
+              alt=""
+              class="dropdown__menu-button-icon"
+              width="9"
+              height="9"
+            />
+          </div>
         </div>
         <ul class="options-list" id="options-list-1">
           <li value="" class="option option-1">1990</li>
@@ -271,18 +274,20 @@
           <li value="" class="option option-1">2025</li>
         </ul>
       </div>
-      年
 
       <div class="custom-select">
         <div class="selected-option" id="selected-option-2">
-          <span id="selected-option-span-2">01</span
-          ><img
-            src="./assets/img/down-arrow.svg"
-            alt=""
-            class="dropdown__menu-button-icon"
-            width="18"
-            height="9"
-          />
+          <span id="selected-option-span-2">01</span>
+          <div>
+            <span id="selected-option-span-2-2"> 月 </span>
+            <img
+              src="./assets/img/down-arrow.png"
+              alt=""
+              class="dropdown__menu-button-icon"
+              width="9"
+              height="9"
+            />
+          </div>
         </div>
         <ul class="options-list" id="options-list-2">
           <li value="" class="option option-2">01</li>
@@ -299,18 +304,20 @@
           <li value="" class="option option-2">12</li>
         </ul>
       </div>
-      月
 
       <div class="custom-select">
         <div class="selected-option" id="selected-option-3">
-          <span id="selected-option-span-3">01</span
-          ><img
-            src="./assets/img/down-arrow.svg"
-            alt=""
-            class="dropdown__menu-button-icon"
-            width="18"
-            height="9"
-          />
+          <span id="selected-option-span-3">01</span>
+          <div>
+            <span id="selected-option-span-3-3">
+              日<img
+                src="./assets/img/down-arrow.png"
+                alt=""
+                class="dropdown__menu-button-icon"
+                width="9"
+                height="9"
+            /></span>
+          </div>
         </div>
         <ul class="options-list" id="options-list-3">
           <li value="" class="option option-3">01</li>
@@ -346,7 +353,6 @@
           <li value="" class="option option-3">31</li>
         </ul>
       </div>
-      日
     </div>
 
     <div style="margin-top: 20px">Demo EN</div>
@@ -355,14 +361,17 @@
     >
       <div class="custom-select">
         <div class="selected-option" id="selected-option-5">
-          <span id="selected-option-span-5">01</span
-          ><img
-            src="./assets/img/down-arrow.svg"
-            alt=""
-            class="dropdown__menu-button-icon"
-            width="18"
-            height="9"
-          />
+          <span id="selected-option-span-5">01</span>
+          <div>
+            <span id="selected-option-span-5-5"
+              >Month<img
+                src="./assets/img/down-arrow.png"
+                alt=""
+                class="dropdown__menu-button-icon"
+                width="9"
+                height="9"
+            /></span>
+          </div>
         </div>
         <ul class="options-list" id="options-list-5">
           <li value="" class="option option-5">01</li>
@@ -379,18 +388,19 @@
           <li value="" class="option option-5">12</li>
         </ul>
       </div>
-      月
-
       <div class="custom-select">
         <div class="selected-option" id="selected-option-6">
-          <span id="selected-option-span-6">01</span
-          ><img
-            src="./assets/img/down-arrow.svg"
-            alt=""
-            class="dropdown__menu-button-icon"
-            width="18"
-            height="9"
-          />
+          <span id="selected-option-span-6">01</span>
+          <div>
+            <span id="selected-option-span-6-6">Day</span>
+            <img
+              src="./assets/img/down-arrow.png"
+              alt=""
+              class="dropdown__menu-button-icon"
+              width="9"
+              height="9"
+            />
+          </div>
         </div>
         <ul class="options-list" id="options-list-6">
           <li value="" class="option option-6">01</li>
@@ -426,18 +436,20 @@
           <li value="" class="option option-6">31</li>
         </ul>
       </div>
-      日
 
       <div class="custom-select">
         <div class="selected-option" id="selected-option-4">
-          <span id="selected-option-span-4">1990</span
-          ><img
-            src="./assets/img/down-arrow.svg"
-            alt=""
-            class="dropdown__menu-button-icon"
-            width="18"
-            height="9"
-          />
+          <span id="selected-option-span-4">1990</span>
+          <div>
+            <span id="selected-option-span-4-4">Year</span>
+            <img
+              src="./assets/img/down-arrow.png"
+              alt=""
+              class="dropdown__menu-button-icon"
+              width="9"
+              height="9"
+            />
+          </div>
         </div>
         <ul class="options-list" id="options-list-4">
           <li value="" class="option option-4">1990</li>
@@ -478,47 +490,46 @@
           <li value="" class="option option-4">2025</li>
         </ul>
       </div>
-      年
     </div>
 
     <script>
-      document
-        .getElementById("dateInput")
-        .addEventListener("input", function (e) {
-          let value = e.target.value;
+      // document
+      //   .getElementById("dateInput")
+      //   .addEventListener("input", function (e) {
+      //     let value = e.target.value;
 
-          // Allow only numbers and slashes
-          value = value.replace(/[^\d/]/g, "");
+      //     // Allow only numbers and slashes
+      //     value = value.replace(/[^\d/]/g, "");
 
-          // Format the input as yyyy/mm/dd
-          if (value.length > 4 && value[4] !== "/") {
-            value = value.slice(0, 4) + "/" + value.slice(4);
-          }
-          if (value.length > 7 && value[7] !== "/") {
-            value = value.slice(0, 7) + "/" + value.slice(7);
-          }
+      //     // Format the input as yyyy/mm/dd
+      //     if (value.length > 4 && value[4] !== "/") {
+      //       value = value.slice(0, 4) + "/" + value.slice(4);
+      //     }
+      //     if (value.length > 7 && value[7] !== "/") {
+      //       value = value.slice(0, 7) + "/" + value.slice(7);
+      //     }
 
-          // Limit to the maximum length for yyyy/mm/dd
-          value = value.slice(0, 10);
+      //     // Limit to the maximum length for yyyy/mm/dd
+      //     value = value.slice(0, 10);
 
-          e.target.value = value;
-        });
+      //     e.target.value = value;
+      //   });
 
-      document
-        .getElementById("dateInput1")
-        .addEventListener("input", function (e) {
-          let value = e.target.value.replace(/[^0-9]/g, "");
+      // document
+      //   .getElementById("dateInput1")
+      //   .addEventListener("input", function (e) {
+      //     let value = e.target.value.replace(/[^0-9]/g, "");
 
-          e.target.value = value;
-        });
+      //     e.target.value = value;
+      //   });
 
-      document
-        .getElementById("dateInput3")
-        .addEventListener("input", function (e) {
-          let value = e.target.value.replace(/[^0-9]/g, "");
+      // document
+      //   .getElementById("dateInput3")
+      //   .addEventListener("input", function (e) {
+      //     let value = e.target.value.replace(/[^0-9]/g, "");
 
-          e.target.value = value;
-        });
+      //     e.target.value = value;
+      //   });
 
       const selectedOption1 = document.getElementById("selected-option-1");
       const optionsList1 = document.getElementById("options-list-1");
@@ -539,6 +550,15 @@
       const selectOptionSpan3 = document.getElementById(
         "selected-option-span-3"
       );
+      const selectOptionSpan11 = document.getElementById(
+        "selected-option-span-1-1"
+      );
+      const selectOptionSpan22 = document.getElementById(
+        "selected-option-span-2-2"
+      );
+      const selectOptionSpan33 = document.getElementById(
+        "selected-option-span-3-3"
+      );
 
       selectedOption1.addEventListener("click", () => {
         optionsList1.classList.toggle("active");
@@ -548,6 +568,7 @@
         option.addEventListener("click", (e) => {
           selectOptionSpan1.textContent = e.target.textContent;
           selectOptionSpan1.style.color = "#000000";
+          selectOptionSpan11.style.color = "#000000";
           optionsList1.classList.remove("active");
         });
       });
@@ -566,6 +587,7 @@
         option.addEventListener("click", (e) => {
           selectOptionSpan2.textContent = e.target.textContent;
           selectOptionSpan2.style.color = "#000000";
+          selectOptionSpan22.style.color = "#000000";
           optionsList2.classList.remove("active");
         });
       });
@@ -584,6 +606,7 @@
         option.addEventListener("click", (e) => {
           selectOptionSpan3.textContent = e.target.textContent;
           selectOptionSpan3.style.color = "#000000";
+          selectOptionSpan33.style.color = "#000000";
           optionsList3.classList.remove("active");
         });
       });
@@ -613,6 +636,15 @@
       const selectOptionSpan6 = document.getElementById(
         "selected-option-span-6"
       );
+      const selectOptionSpan44 = document.getElementById(
+        "selected-option-span-4-4"
+      );
+      const selectOptionSpan55 = document.getElementById(
+        "selected-option-span-5-5"
+      );
+      const selectOptionSpan66 = document.getElementById(
+        "selected-option-span-6-6"
+      );
 
       selectedOption4.addEventListener("click", () => {
         optionsList4.classList.toggle("active");
@@ -622,6 +654,7 @@
         option.addEventListener("click", (e) => {
           selectOptionSpan4.textContent = e.target.textContent;
           selectOptionSpan4.style.color = "#000000";
+          selectOptionSpan44.style.color = "#000000";
           optionsList4.classList.remove("active");
         });
       });
@@ -640,6 +673,7 @@
         option.addEventListener("click", (e) => {
           selectOptionSpan5.textContent = e.target.textContent;
           selectOptionSpan5.style.color = "#000000";
+          selectOptionSpan55.style.color = "#000000";
           optionsList5.classList.remove("active");
         });
       });
@@ -658,6 +692,7 @@
         option.addEventListener("click", (e) => {
           selectOptionSpan6.textContent = e.target.textContent;
           selectOptionSpan6.style.color = "#000000";
+          selectOptionSpan66.style.color = "#000000";
           optionsList6.classList.remove("active");
         });
       });
