--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     <div
       style="display: flex; gap: 20px; margin-top: 20px; align-items: center"
     >
-      <div class="custom-select">
+      <div class="custom-select custom-select-jp">
         <div class="selected-option" id="selected-option-1">
           <span id="selected-option-span-1">1990</span>
           <div>
@@ -275,7 +275,7 @@
         </ul>
       </div>
 
-      <div class="custom-select">
+      <div class="custom-select custom-select-jp">
         <div class="selected-option" id="selected-option-2">
           <span id="selected-option-span-2">01</span>
           <div>
@@ -305,7 +305,7 @@
         </ul>
       </div>
 
-      <div class="custom-select">
+      <div class="custom-select custom-select-jp">
         <div class="selected-option" id="selected-option-3">
           <span id="selected-option-span-3">01</span>
           <div>
