--- a/index.html
+++ b/index.html
@@ -310,7 +310,8 @@
       <div class="custom-select custom-select-jp">
         <div class="selected-option" id="selected-option-3">
           <span id="selected-option-span-3"
-            >01<span id="selected-option-span-3-3"> 日</span></span>
+            >01<span id="selected-option-span-3-3"> 日</span></span
+          >
           <div>
             <img
               src="./assets/img/down-arrow.png"
@@ -363,16 +364,17 @@
     >
       <div class="custom-select">
         <div class="selected-option" id="selected-option-5">
-          <span id="selected-option-span-5"></span>
+          <span id="selected-option-span-5">
+            <span id="selected-option-span-5-5">Month</span></span
+          >
           <div>
-            <span id="selected-option-span-5-5"
-              >Month<img
-                src="./assets/img/down-arrow.png"
-                alt=""
-                class="dropdown__menu-button-icon"
-                width="9"
-                height="9"
-            /></span>
+            <img
+              src="./assets/img/down-arrow.png"
+              alt=""
+              class="dropdown__menu-button-icon"
+              width="9"
+              height="9"
+            />
           </div>
         </div>
         <ul class="options-list" id="options-list-5">
@@ -392,9 +394,10 @@
       </div>
       <div class="custom-select">
         <div class="selected-option" id="selected-option-6">
-          <span id="selected-option-span-6"></span>
+          <span id="selected-option-span-6">
+            <span id="selected-option-span-6-6">Day</span></span
+          >
           <div>
-            <span id="selected-option-span-6-6">Day</span>
             <img
               src="./assets/img/down-arrow.png"
               alt=""
@@ -441,9 +444,10 @@
 
       <div class="custom-select">
         <div class="selected-option" id="selected-option-4">
-          <span id="selected-option-span-4"></span>
+          <span id="selected-option-span-4">
+            <span id="selected-option-span-4-4">Year</span></span
+          >
           <div>
-            <span id="selected-option-span-4-4">Year</span>
             <img
               src="./assets/img/down-arrow.png"
               alt=""
